manifests/02-chat-serve-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-serve
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-serve
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chat-serve
    spec:
      containers:
      - image: quay.io/rhn_support_arolivei/chat
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
