manifests/03-chat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
  namespace: chat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: chat-serve
  type: ClusterIP
